--- a/web/static/alix.css
+++ b/web/static/alix.css
@@ -137,7 +137,7 @@ nav.tabs a:hover {
 
 nav.tabs form {
   display: block;
-  padding: 2px 0.5rem;
+  padding: 0 0.5rem;
   margin: 0;
   float: right;
   flex-grow: 4;
@@ -441,6 +441,7 @@ main {
 
 article.text,
 div.text {
+  background-color: var(--bglo);
   width: 50rem;
   padding: 2rem;
   margin-left: auto;
@@ -626,7 +627,7 @@ caption a {
 .mod4 td,
 .mod6 td,
 .mod9 td {
-  border-bottom: 0.5px solid var(--textinv);
+  border-bottom: 0.5px dotted var(--textinv);
 }
 
 .mod1 td.no,
@@ -638,11 +639,11 @@ caption a {
 
 
 .mod0 td {
-  border-bottom: 2px solid var(--textlo);
+  border-bottom: 1.5px solid var(--text);
 }
 
 .mod5 td {
-  border-bottom: 0.6px solid var(--textlo);
+  border-bottom: 0.5px solid var(--text);
 }
 
 td.no {
