--- a/web/local/alix-delacroix.css
+++ b/web/local/alix-delacroix.css
@@ -15,7 +15,7 @@
   --text2: #f5ebea;
   --text2hi: #fff;
   --text2inv: #fff;
-  --bg3: #ddd;
+  --bg3: #dca497;
   --text3: #333;
   --fontui: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   --fontdoc: 'Bodoni Moda', 'Old Standard TT', serif;
