--- a/web/static/alix.css
+++ b/web/static/alix.css
@@ -44,6 +44,7 @@
 #graphcount::after,
 body::after,
 main::after,
+form::after,
 div.row::after,
 nav.tabs::after {
   content: "";
@@ -254,7 +255,7 @@ dt strong {
 form.search {
   background: var(--bg2);
   color: var(--text2);
-  padding: 10px 2rem 10px 2rem;
+  padding: 1px 0.5rem 1px 0.5rem;
 }
 
 .button,
