--- a/web/static/alix.css
+++ b/web/static/alix.css
@@ -934,16 +934,19 @@ article.kwic header a {
   display: block;
 }
 
+div.line a {
+  font-weight: bold;
+  padding: 0 0.5rem;
+  background-color: var(--bglo);
+  color: var(--link);
+}
+
 article.kwic header a:hover {
   text-decoration: none;
   background-color: var(--bghi);
   color: var(--texthi);
 }
 
-div.line a {
-  font-weight: bold;
-  color: var(--link);
-}
 article.kwic div.line a:hover {
   text-decoration: none;
 }
