--- a/web/jsp/prelude.jspf
+++ b/web/jsp/prelude.jspf
@@ -69,88 +69,25 @@ public String color(int tag)
     return color;
 
 }
-/**
- * 17530301 -> 1753-03-01
- * 17530000 -> 1753
- */
-public String int2date(int value) {
-    String date = "" + value;
-    date = date.substring(0, 4) + "-" + date.substring(4, 6) + "-" + date.substring(6, 8);
-    date = date.replaceFirst("\\-00.*$", "");
-    return date;
-}
-
-/**
- * 1753 -> 17530000
- * 1753-03-01 -> 17530301
- */
-public int date2int(String date) {
-    int value = Integer.MIN_VALUE;
-    if (date == null) return value;
-    date = date.trim();
-    if (!date.matches("-?\\d{1,4}(-\\d\\d)?(-\\d\\d)?")) return value;
-    boolean negative = false;
-    if (date.charAt(0) == '-') {
-        negative = true;
-        date = date.substring(1);
-    }
-    // get year, maybe negative
-    String[] parts = date.split("-");
-    try {
-        int v = Integer.parseInt(parts[0]);
-        value = v * 10000;
-    }
-    catch (Exception e) {
-        return value;
-    }
-    if (parts.length > 1) {
-       try {
-             int v = Integer.parseInt(parts[1]);
-             value += v * 100;
-         }
-         catch (Exception e) {
-             return value;
-         }
-    }
-    if (parts.length > 2) {
-        try {
-             int v = Integer.parseInt(parts[2]);
-             value += v;
-        }
-        catch (Exception e) {
-           return value;
-        }
-    }
-    if (negative) return -value;
-    return value;
-}
  
-/**
- * 17530000 -> 17539999
- */
-public int upperDate(int date)
-{
-    if (date % 10000 == 0) return date + 9999;
-    if (date % 100 == 0) return date + 99;
-    return date;
-}
+
 
 /**
  * 
  */
 public Query dateQuery(String field, String date1, String date2)
 {
-    int d1 = date2int(date1);
-    int d2 = date2int(date2);
+    int d1 = FieldInt.date2int(date1);
+    int d2 = FieldInt.date2int(date2);
     if (d2 < d1) d2 = Integer.MIN_VALUE;
     if (d1 == Integer.MIN_VALUE) return null;
     if (d2 == Integer.MIN_VALUE) {
         // only one date
-        d2 = upperDate(d1);
+        d2 = FieldInt.yearCeil(d1);
         if (d2 == d1) return IntPoint.newExactQuery(field, d1);
         return IntPoint.newRangeQuery(field, d1, d2);
     }
-    return IntPoint.newRangeQuery(field, d1, upperDate(d2));
+    return IntPoint.newRangeQuery(field, d1, FieldInt.yearCeil(d2));
 }
  
  /**
