--- a/web/static/alix.css
+++ b/web/static/alix.css
@@ -96,6 +96,11 @@ body::-webkit-scrollbar-thumb {
     /* creates padding around scroll thumb */
 }
 
+input[type="range"]::-moz-range-track {
+    padding: 0 10px;
+    background: repeating-linear-gradient(to right, #ccc, #ccc 10%, #000 10%, #000 11%, #ccc 11%, #ccc 20%);
+}
+
 body {
     background-color: var(--bglo);
     color: var(--textlo);
